fixed alignment to center better

--- a/pathfinding-algo/src/BFS/BFS.css
+++ b/pathfinding-algo/src/BFS/BFS.css
@@ -29,7 +29,7 @@ text-align: center;
       width: 540px;
       font-size: 16px;
       font-weight: bold;
-      margin-left: 28%;
+      margin-left: 35%;
       margin-bottom: 5%;
   }
 
